--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Doberman Netzwerk Analysis</title>
+        <title>Dobewerk</title>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
         <meta charset="utf-8">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
